--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ python-decouple = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
 flask-migrate = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
