--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==22.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
 migrate==0.3.8
+packaging==24.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-decouple==3.8
